@@ -1,5 +1,15 @@
 \name{NEWS}
 \title{News for package 'maps'}
+\section{Changes in maps version 3.2.0 (2017-01-25)}{
+  \itemize{
+    \item New wrapping code should eliminate border artefacts on world maps, even with \code{fill=TRUE}. It can be called via \code{map(..., wrap=c(0,360),...)}, i.e. by giving \code{wrap} a vector in stead of a boolean value. The wrapping code is also directly calleble as \code{map.wrap.poly(data, xlim, poly=FALSE, antarctica=-89)}.
+    \item \code{map()} has a new argument \code{lforce} (force limits). Possible values are \code{"n"} (no, default), \code{"p"} (projected limits) and \code("l") (original limits). Forcing the limits will limit your map more forcibly to the given limits.
+    \item \code{maptype()} always return \code{"spherical"} for external databases. Now it is possible to add a \code{maptype}, e.g. \code{mymap$maptype <- "planar"}.
+    \item \code{county.fips} and \code{county.state}: changed from factors to character vectors.
+    \item Minor correction to \code{us.cities}.
+    \item When using projections, \code{map()} now checks for the availability of \code{mapproj} and gives a nicer message if it isn't available.
+  }
+}
 \section{Changes in maps version 3.1.1 (2016-07-19)}{
   \itemize{
     \item perl style regex caused problems for very long lists of regions. Fixed by setting perl=FALSE if the list of regions contains more than 1000 entries or the resulting regex is more than 30000 characters long.
